fix: changes RSS endpoints from UOL to G1
